# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.680 2008-06-26 11:02:08 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.0 beta4 (2008/07/??)
 - (2008/06/26) Fixed bug# 3034 - Ticket::Frontend::ZoomExpandSort is
    conflicting with new ticket Expand/Collapse feature in AgentTicketZoom, it
    get lost after clicking on Collapse.
 - (2008/06/26) Moved required permissions for ticket owner-selections to
    owner and for ticket responsible-selection to responsible (instead rw
    permissions).
 - (2008/06/23) Fixed bug# 3020 - New complex link table blocks output of the
    free text fields.
 - (2008/06/23) Fixed bug# 3019 - Wrong location of the new complex link table.

2.3.0 beta3 (2008/06/24)
 - (2008/06/23) Fixed bug# 3015 - Performace problem in AgentLinkObject.
 - (2008/06/23) Added CustomerUser attribute support for Ticket-ACLs. For
    Example you can use customer user attributes in ACL properties in
    this case to create an list of possible queues in the customer
    interface for creating or moving tickets.

    $Self->{TicketAcl}->{'ACL-Name-Test'} = {
        # match properties
        Properties => {
            CustomerUser => {
                UserCustomerID => ['some_customer_id'],
            },
        }
        # possible properties
        Possible => {
            Ticket => {
                Queue => ['Hotline', 'Junk'],
            },
        },
    };

 - (2008/06/23) Fixed bug# 3013 - Freetext fields show wrong on AJAX update
    in phone and email ticket when queue is changed.
 - (2008/06/23) Updated cpan module TEXT::CSV to version 1.06.
 - (2008/06/23) Moved Ticket::ResponsibleAutoSet feature to external ticket
    event module (Kernel::System::Ticket::Event::ResponsibleAutoSet).