@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.680 2008-06-26 11:02:08 martin Exp $
+# $Id: CHANGES,v 1.681 2008-06-26 15:53:58 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.3.0 beta4 (2008/07/??)
+ - (2008/06/26) Getting no error message if I link an already linked ticket
+    again.
  - (2008/06/26) Fixed bug# 3034 - Ticket::Frontend::ZoomExpandSort is
     conflicting with new ticket Expand/Collapse feature in AgentTicketZoom, it
     get lost after clicking on Collapse.
